--- a/resetpassword.html
+++ b/resetpassword.html
@@ -36,8 +36,8 @@
                 </div>
                 <a href="#" class="btn btn-primary w-100">Reset password</a>
                 <div class="d-flex justify-content-between mt-4">
-                    <a class="" href="#">Login</a>
-                    <a class="" href="#">Register</a>
+                    <a class="" href="login.html">Login</a>
+                    <a class="" href="register.html">Register</a>
                 </div>
             </div>
         </div>
