--- a/html/add-product.html
+++ b/html/add-product.html
@@ -655,6 +655,15 @@
                                                 </div>
                                         </div>
 
+                                        <div class="row">
+                                            <div class="form-group mb-3 col-xs-12 col-sm-6">
+                                                <label for="expire_date">Price
+                                                </label>
+                                                <input id="expire_date" name="expire_date" type="text" value="" class="form-control validate" data-large-mode="true" />
+                                            </div>
+
+                                        </div>
+
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-12 mx-auto mb-4">
                                         <div class="tm-product-img-dummy mx-auto">
