--- a/shop-single.html
+++ b/shop-single.html
@@ -110,9 +110,9 @@
                             <label for="option-lg" class="d-flex mr-3 mb-3">
                 <span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-lg" name="shop-sizes"></span> <span class="d-inline-block text-black">Large</span>
               </label>
-                            <label for="option-xl" class="d-flex mr-3 mb-3">
+                            <!-- <label for="option-xl" class="d-flex mr-3 mb-3">
                 <span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-xl" name="shop-sizes"></span> <span class="d-inline-block text-black"> Extra Large</span>
-              </label>
+              </label> -->
                         </div>
                         <div class="mb-5">
                             <div class="input-group mb-3" style="max-width: 120px;">
