--- a/shop.html
+++ b/shop.html
@@ -100,19 +100,10 @@
                                 <div class="d-flex">
                                     <input class="float-md-right mb-2 text-black h5" placeholder="Search"></input>
                                     <div class="dropdown mr-1 ml-md-auto">
-                                        <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Latest
-                    </button>
-                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
-                                            <a class="dropdown-item" href="#">Men</a>
-                                            <a class="dropdown-item" href="#">Women</a>
-                                            <a class="dropdown-item" href="#">Children</a>
-                                        </div>
                                     </div>
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" id="dropdownMenuReference" data-toggle="dropdown">Reference</button>
+                                        <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" id="dropdownMenuReference" data-toggle="dropdown">Sort by</button>
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuReference">
-                                            <a class="dropdown-item" href="#">Relevance</a>
                                             <a class="dropdown-item" href="#">Name, A to Z</a>
                                             <a class="dropdown-item" href="#">Name, Z to A</a>
                                             <div class="dropdown-divider"></div>
