--- a/checkout.html
+++ b/checkout.html
@@ -93,7 +93,7 @@
                     <div class="col-md-6 mb-5 mb-md-0">
                         <h2 class="h3 mb-3 text-black">Billing Details</h2>
                         <div class="p-3 p-lg-5 border">
-                            <div class="form-group">
+                            <!-- <div class="form-group">
                                 <label for="c_country" class="text-black">Country <span class="text-danger">*</span></label>
                                 <select id="c_country" class="form-control">
                   <option value="1">Select a country</option>    
@@ -106,7 +106,7 @@
                   <option value="8">Colombia</option>    
                   <option value="9">Dominican Republic</option>    
                 </select>
-                            </div>
+                            </div> -->
                             <div class="form-group row">
                                 <div class="col-md-6">
                                     <label for="c_fname" class="text-black">First Name <span class="text-danger">*</span></label>
