--- a/html/auth-register-basic.html
+++ b/html/auth-register-basic.html
@@ -151,7 +151,7 @@
                     </label>
                             </div>
                         </div>
-                        <a href="index.html"><button class="btn btn-primary d-grid w-100" type="submit">Sign up</button></a>
+                        <a href="../index.html"><button class="btn btn-primary d-grid w-100" type="submit">Sign up</button></a>
                         <h2></h2>
 
                         <p class="text-center">
