--- a/html/edit-order.html
+++ b/html/edit-order.html
@@ -237,6 +237,25 @@
                         </ul>
                     </li>
 
+                    <li class="menu-item">
+                        <a href="javascript:void(0);" class="menu-link menu-toggle">
+                            <i class="menu-icon tf-icons bx bx-dock-top"></i>
+                            <div data-i18n="Account Settings">Product</div>
+                        </a>
+                        <ul class="menu-sub">
+                            <li class="menu-item">
+                                <a href="products.html" class="menu-link">
+                                    <div data-i18n="Notifications">Product management</div>
+                                </a>
+                            </li>
+                            <!-- <li class="menu-item">
+                              <a href="pages-account-settings-connections.html" class="menu-link">
+                                  <div data-i18n="Connections">Connections</div>
+                              </a>
+                          </li> -->
+                        </ul>
+                    </li>
+
                     <!-- <li class="menu-item">
                         <a href="javascript:void(0);" class="menu-link menu-toggle">
                             <i class="menu-icon tf-icons bx bx-lock-open-alt"></i>
