--- a/shop.html
+++ b/shop.html
@@ -46,8 +46,9 @@
                         <div class="col-6 col-md-4 order-3 order-md-3 text-right">
                             <div class="site-top-icons">
                                 <ul>
-                                    <li><a href="html/auth-login-basic.html">Login - <span class="icon icon-person"></span></a></li>
-                                    <li><a href="#"><span class="icon icon-heart-o"></span></a></li>
+                                    <li><a href="html/auth-login-basic.html">Login</a></li>
+                                    <li><a href="index.html">Logout</a></li>
+                                    <li><a href="customer_info.html"><span class="icon icon-person"></span></a></li>
                                     <li>
                                         <a href="cart.html" class="site-cart">
                                             <span class="icon icon-shopping_cart"></span>
@@ -125,6 +126,7 @@
                                         <h3><a href="shop-single.html">Tank Top</a></h3>
                                         <p class="mb-0">Finding perfect t-shirt</p>
                                         <p class="text-primary font-weight-bold">$50</p>
+                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -137,6 +139,8 @@
                                         <h3><a href="shop-single.html">Corater</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
+                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+
                                     </div>
                                 </div>
                             </div>
@@ -149,6 +153,8 @@
                                         <h3><a href="shop-single.html">Polo Shirt</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
+                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+
                                     </div>
                                 </div>
                             </div>
@@ -162,6 +168,8 @@
                                         <h3><a href="shop-single.html">T-Shirt Mockup</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
+                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+
                                     </div>
                                 </div>
                             </div>
@@ -174,6 +182,8 @@
                                         <h3><a href="shop-single.html">Corater</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
+                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+
                                     </div>
                                 </div>
                             </div>
@@ -186,6 +196,8 @@
                                         <h3><a href="shop-single.html">Tank Top</a></h3>
                                         <p class="mb-0">Finding perfect t-shirt</p>
                                         <p class="text-primary font-weight-bold">$50</p>
+                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+
                                     </div>
                                 </div>
                             </div>
@@ -198,6 +210,8 @@
                                         <h3><a href="shop-single.html">Corater</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
+                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+
                                     </div>
                                 </div>
                             </div>
@@ -210,6 +224,8 @@
                                         <h3><a href="shop-single.html">Polo Shirt</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
+                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+
                                     </div>
                                 </div>
                             </div>
@@ -223,6 +239,8 @@
                                         <h3><a href="shop-single.html">T-Shirt Mockup</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
+                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+
                                     </div>
                                 </div>
                             </div>
@@ -235,6 +253,8 @@
                                         <h3><a href="shop-single.html">Corater</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
+                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+
                                     </div>
                                 </div>
                             </div>
@@ -247,6 +267,8 @@
                                         <h3><a href="shop-single.html">Tank Top</a></h3>
                                         <p class="mb-0">Finding perfect t-shirt</p>
                                         <p class="text-primary font-weight-bold">$50</p>
+                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+
                                     </div>
                                 </div>
                             </div>
@@ -260,6 +282,8 @@
                                         <h3><a href="shop-single.html">Polo Shirt</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
+                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+
                                     </div>
                                 </div>
                             </div>
