--- a/order-history.html
+++ b/order-history.html
@@ -46,8 +46,9 @@
                         <div class="col-6 col-md-4 order-3 order-md-3 text-right">
                             <div class="site-top-icons">
                                 <ul>
-                                    <li><a href="html/auth-login-basic.html">Login - <span class="icon icon-person"></span></a></li>
-                                    <li><a href="#"><span class="icon icon-heart-o"></span></a></li>
+                                    <li><a href="html/auth-login-basic.html">Login</a></li>
+                                    <li><a href="index.html">Logout</a></li>
+                                    <li><a href="customer_info.html"><span class="icon icon-person"></span></a></li>
                                     <li>
                                         <a href="cart.html" class="site-cart">
                                             <span class="icon icon-shopping_cart"></span>
