--- a/customer_info.html
+++ b/customer_info.html
@@ -264,7 +264,7 @@
                                 <h5 class="card-header">Change password</h5>
                                 <div class="card-body">
 
-                                    <a href="auth-reset-passwrod.html" type="submit" class="btn btn-danger deactivate-account">Change password</a>
+                                    <a href="html/change-password.html" type="submit" class="btn btn-danger deactivate-account">Change password</a>
                                 </div>
                             </div>
                         </div>
