--- a/html/change-password.html
+++ b/html/change-password.html
@@ -137,7 +137,7 @@
                             <label for="email" class="form-label">Repeat new Password</label>
                             <input type="text" class="form-control" id="email" name="email" placeholder="Enter your repeat password" autofocus />
                         </div>
-                        <a href="auth-login-basic.html"><button class="btn btn-primary d-grid w-100">Reset password</button></a>
+                        <a href="auth-login-basic.html"><button class="btn btn-primary d-grid w-100">Change password</button></a>
                         <h2></h2>
                         <div class="text-center">
                             <a href="../customer_info.html" class="d-flex align-items-center justify-content-center">
