--- a/html/add-category.html
+++ b/html/add-category.html
@@ -602,7 +602,7 @@
                                     <div class="row">
                                         <div class="col-12">
                                             <h2></h2>
-                                            <h2 class="tm-block-title d-inline-block">Add Product</h2>
+                                            <h2 class="tm-block-title d-inline-block">Add Category</h2>
                                         </div>
                                     </div>
                                     <div class="row tm-edit-product-row">
