--- a/html/auth-login-basic.html
+++ b/html/auth-login-basic.html
@@ -63,7 +63,7 @@
                     <div class="card-body">
                         <!-- Logo -->
                         <div class="app-brand justify-content-center">
-                            <a href="index.html" class="app-brand-link gap-2">
+                            <a href="" class="app-brand-link gap-2">
                                 <span class="app-brand-logo demo">
                     <svg
                       width="25"
@@ -149,7 +149,7 @@
                             </div>
                         </div>
                         <div class="mb-3">
-                            <a href="../index.html"><button class="btn btn-primary d-grid w-100" type="submit">Sign in with customer</button></a>
+                            <a href="../homepage(customer).html"><button class="btn btn-primary d-grid w-100" type="submit">Sign in with customer</button></a>
                         </div>
                         <div class="mb-3">
                             <a href="index.html"><button class="btn btn-primary d-grid w-100" type="submit">Sign in with admin/sale</button></a>
