--- a/html/auth-register-basic.html
+++ b/html/auth-register-basic.html
@@ -63,7 +63,7 @@
                     <div class="card-body">
                         <!-- Logo -->
                         <div class="app-brand justify-content-center">
-                            <a href="index.html" class="app-brand-link gap-2">
+                            <a href="" class="app-brand-link gap-2">
                                 <span class="app-brand-logo demo">
                     <svg
                       width="25"
@@ -151,7 +151,7 @@
                     </label>
                             </div>
                         </div>
-                        <a href="../index.html"><button class="btn btn-primary d-grid w-100" type="submit">Sign up</button></a>
+                        <a href="../homepage(customer).html"><button class="btn btn-primary d-grid w-100" type="submit">Sign up</button></a>
                         <h2></h2>
 
                         <p class="text-center">
