--- a/html/edit-user.html
+++ b/html/edit-user.html
@@ -61,7 +61,7 @@
 
             <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
                 <div class="app-brand demo">
-                    <a href="index.html" class="app-brand-link">
+                    <a href="../index.html" class="app-brand-link">
                         <span class="app-brand-logo demo">
                 <svg
                   width="25"
@@ -227,6 +227,27 @@
                             <li class="menu-item">
                                 <a href="table_datatables.html" class="menu-link">
                                     <div data-i18n="Notifications">List users</div>
+                                </a>
+                            </li>
+                            <!-- <li class="menu-item">
+                                <a href="pages-account-settings-connections.html" class="menu-link">
+                                    <div data-i18n="Connections">Connections</div>
+                                </a>
+                            </li> -->
+                        </ul>
+                    </li>
+                    <li class="menu-item">
+                        <a href="javascript:void(0);" class="menu-link menu-toggle">
+                            <i class="menu-icon tf-icons bx bx-dock-top"></i>
+                            <div data-i18n="Account Settings">Product</div>
+                        </a>
+                        <ul class="menu-sub">
+                            <li class="menu-item">
+                                <a href="products.html" class="menu-link">
+                                    <div data-i18n="Notifications">Product management</div>
+                                </a>
+                                <a href="Category.html" class="menu-link">
+                                    <div data-i18n="Notifications">Category management</div>
                                 </a>
                             </li>
                             <!-- <li class="menu-item">
@@ -850,6 +871,7 @@
     <script src="js/config.js"></script>
     <script src='js/jquery.dataTables.min.js'></script>
     <script src='js/dataTables.bootstrap4.min.js'></script>
+
 
 </body>
 
