--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                         <div class="col-12 mb-3 mb-md-0 col-md-4 order-1 order-md-2 text-center">
                             <div class="site-logo">
-                                <a href="index.html" class="js-logo-clone">ESS</a>
+                                <a href="" class="js-logo-clone">ESS</a>
                             </div>
                         </div>
 
@@ -47,14 +47,6 @@
                             <div class="site-top-icons">
                                 <ul>
                                     <li><a href="html/auth-login-basic.html">Login</a></li>
-                                    <li><a href="index.html">Logout</a></li>
-                                    <li><a href="customer_info.html"><span class="icon icon-person"></span></a></li>
-                                    <li>
-                                        <a href="cart.html" class="site-cart">
-                                            <span class="icon icon-shopping_cart"></span>
-                                            <span class="count">2</span>
-                                        </a>
-                                    </li>
                                     <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
                                 </ul>
                             </div>
@@ -70,11 +62,10 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="about.html">About</a>
+                            <a href="about_guest.html">About</a>
                         </li>
-                        <li><a href="shop.html">Shop</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="order-history.html">Order history</a></li>
+                        <li><a href="shop_guest.html">Shop</a></li>
+                        <li><a href="contact_guest.html">Contact</a></li>
                     </ul>
                 </div>
             </nav>
@@ -88,7 +79,7 @@
                         <div class="intro-text text-center text-md-left">
                             <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan tincidunt fringilla. </p>
                             <p>
-                                <a href="shop.html" class="btn btn-sm btn-primary">Shop Now</a>
+                                <a href="shop_guest.html" class="btn btn-sm btn-primary">Shop Now</a>
                             </p>
                         </div>
                     </div>
@@ -261,7 +252,7 @@
                         <h2><a href="#">50% less in all items</a></h2>
                         <p class="post-meta mb-4">By <a href="#">Carl Smith</a> <span class="block-8-sep">&bullet;</span> September 3, 2018</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam iste dolor accusantium facere corporis ipsum animi deleniti fugiat. Ex, veniam?</p>
-                        <p><a href="shop.html" class="btn btn-primary btn-sm">Shop Now</a></p>
+                        <p><a href="shop_guest.html" class="btn btn-primary btn-sm">Shop Now</a></p>
                     </div>
                 </div>
             </div>
