--- a/about_guest.html
+++ b/about_guest.html
@@ -46,15 +46,7 @@
                         <div class="col-6 col-md-4 order-3 order-md-3 text-right">
                             <div class="site-top-icons">
                                 <ul>
-
-                                    <li><a href="index.html">Logout</a></li>
-                                    <li><a href="customer_info.html"><span class="icon icon-person"></span></a></li>
-                                    <li>
-                                        <a href="cart.html" class="site-cart">
-                                            <span class="icon icon-shopping_cart"></span>
-                                            <span class="count">2</span>
-                                        </a>
-                                    </li>
+                                    <li><a href="html/auth-login-basic.html">Login</a></li>
                                     <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
                                 </ul>
                             </div>
@@ -67,14 +59,13 @@
                 <div class="container">
                     <ul class="site-menu js-clone-nav d-none d-md-block">
                         <li>
-                            <a href="homepage(customer).html">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="about.html">About</a>
+                            <a href="about_guest.html">About</a>
                         </li>
-                        <li><a href="shop.html">Shop</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="order-history.html">Order history</a></li>
+                        <li><a href="shop_guest.html">Shop</a></li>
+                        <li><a href="contact_guest.html">Contact</a></li>
                     </ul>
                 </div>
             </nav>
@@ -232,9 +223,9 @@
                             <div class="col-md-6 col-lg-4">
                                 <ul class="list-unstyled">
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="shop.html">Shop</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="about_guest.html">About</a></li>
+                                    <li><a href="shop_guest.html">Shop</a></li>
+                                    <li><a href="contact_guest.html">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
