--- a/html/index.html
+++ b/html/index.html
@@ -61,7 +61,7 @@
 
             <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
                 <div class="app-brand demo">
-                    <a href="index.html" class="app-brand-link">
+                    <a href="../index.html" class="app-brand-link">
                         <span class="app-brand-logo demo">
                 <svg
                   width="25"
@@ -246,6 +246,9 @@
                             <li class="menu-item">
                                 <a href="products.html" class="menu-link">
                                     <div data-i18n="Notifications">Product management</div>
+                                </a>
+                                <a href="Category.html" class="menu-link">
+                                    <div data-i18n="Notifications">Category management</div>
                                 </a>
                             </li>
                             <!-- <li class="menu-item">
