--- a/order-history.html
+++ b/order-history.html
@@ -39,14 +39,14 @@
 
                         <div class="col-12 mb-3 mb-md-0 col-md-4 order-1 order-md-2 text-center">
                             <div class="site-logo">
-                                <a href="index.html" class="js-logo-clone">ESS</a>
+                                <a href="" class="js-logo-clone">ESS</a>
                             </div>
                         </div>
 
                         <div class="col-6 col-md-4 order-3 order-md-3 text-right">
                             <div class="site-top-icons">
                                 <ul>
-                                    <li><a href="html/auth-login-basic.html">Login</a></li>
+
                                     <li><a href="index.html">Logout</a></li>
                                     <li><a href="customer_info.html"><span class="icon icon-person"></span></a></li>
                                     <li>
@@ -67,7 +67,7 @@
                 <div class="container">
                     <ul class="site-menu js-clone-nav d-none d-md-block">
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="homepage(customer).html">Home</a>
                         </li>
                         <li>
                             <a href="about.html">About</a>
