--- a/shop_guest.html
+++ b/shop_guest.html
@@ -46,15 +46,7 @@
                         <div class="col-6 col-md-4 order-3 order-md-3 text-right">
                             <div class="site-top-icons">
                                 <ul>
-
-                                    <li><a href="index.html">Logout</a></li>
-                                    <li><a href="customer_info.html"><span class="icon icon-person"></span></a></li>
-                                    <li>
-                                        <a href="cart.html" class="site-cart">
-                                            <span class="icon icon-shopping_cart"></span>
-                                            <span class="count">2</span>
-                                        </a>
-                                    </li>
+                                    <li><a href="html/auth-login-basic.html">Login</a></li>
                                     <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
                                 </ul>
                             </div>
@@ -67,14 +59,13 @@
                 <div class="container">
                     <ul class="site-menu js-clone-nav d-none d-md-block">
                         <li>
-                            <a href="homepage(customer).html">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="about.html">About</a>
+                            <a href="about_guest.html">About</a>
                         </li>
-                        <li><a href="shop.html">Shop</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="order-history.html">Order history</a></li>
+                        <li><a href="shop_guest.html">Shop</a></li>
+                        <li><a href="contact_guest.html">Contact</a></li>
                     </ul>
                 </div>
             </nav>
@@ -120,26 +111,26 @@
                             <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                                 <div class="block-4 text-center border">
                                     <figure class="block-4-image">
-                                        <a href="shop-single.html"><img src="images/cloth_1.jpg" alt="Image placeholder" class="img-fluid"></a>
+                                        <a href="shop-single_guest.html"><img src="images/cloth_1.jpg" alt="Image placeholder" class="img-fluid"></a>
                                     </figure>
                                     <div class="block-4-text p-4">
-                                        <h3><a href="shop-single.html">Tank Top</a></h3>
+                                        <h3><a href="shop-single_guest.html">Tank Top</a></h3>
                                         <p class="mb-0">Finding perfect t-shirt</p>
                                         <p class="text-primary font-weight-bold">$50</p>
-                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+                                        <p><a href="html/auth-login-basic.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                                 <div class="block-4 text-center border">
                                     <figure class="block-4-image">
-                                        <a href="shop-single.html"><img src="images/shoe_1.jpg" alt="Image placeholder" class="img-fluid"></a>
+                                        <a href="shop-single_guest.html"><img src="images/shoe_1.jpg" alt="Image placeholder" class="img-fluid"></a>
                                     </figure>
                                     <div class="block-4-text p-4">
-                                        <h3><a href="shop-single.html">Corater</a></h3>
+                                        <h3><a href="shop-single_guest.html">Corater</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
-                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+                                        <p><a href="html/auth-login-basic.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
 
                                     </div>
                                 </div>
@@ -147,13 +138,13 @@
                             <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                                 <div class="block-4 text-center border">
                                     <figure class="block-4-image">
-                                        <a href="shop-single.html"><img src="images/cloth_2.jpg" alt="Image placeholder" class="img-fluid"></a>
+                                        <a href="shop-single_guest.html"><img src="images/cloth_2.jpg" alt="Image placeholder" class="img-fluid"></a>
                                     </figure>
                                     <div class="block-4-text p-4">
-                                        <h3><a href="shop-single.html">Polo Shirt</a></h3>
+                                        <h3><a href="shop-single_guest.html">Polo Shirt</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
-                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+                                        <p><a href="html/auth-login-basic.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
 
                                     </div>
                                 </div>
@@ -162,13 +153,13 @@
                             <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                                 <div class="block-4 text-center border">
                                     <figure class="block-4-image">
-                                        <a href="shop-single.html"><img src="images/cloth_3.jpg" alt="Image placeholder" class="img-fluid"></a>
+                                        <a href="shop-single_guest.html"><img src="images/cloth_3.jpg" alt="Image placeholder" class="img-fluid"></a>
                                     </figure>
                                     <div class="block-4-text p-4">
-                                        <h3><a href="shop-single.html">T-Shirt Mockup</a></h3>
+                                        <h3><a href="shop-single_guest.html">T-Shirt Mockup</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
-                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+                                        <p><a href="html/auth-login-basic.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
 
                                     </div>
                                 </div>
@@ -176,13 +167,13 @@
                             <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                                 <div class="block-4 text-center border">
                                     <figure class="block-4-image">
-                                        <a href="shop-single.html"><img src="images/shoe_1.jpg" alt="Image placeholder" class="img-fluid"></a>
+                                        <a href="shop-single_guest.html"><img src="images/shoe_1.jpg" alt="Image placeholder" class="img-fluid"></a>
                                     </figure>
                                     <div class="block-4-text p-4">
-                                        <h3><a href="shop-single.html">Corater</a></h3>
+                                        <h3><a href="shop-single_guest.html">Corater</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
-                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+                                        <p><a href="html/auth-login-basic.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
 
                                     </div>
                                 </div>
@@ -190,13 +181,13 @@
                             <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                                 <div class="block-4 text-center border">
                                     <figure class="block-4-image">
-                                        <a href="shop-single.html"><img src="images/cloth_1.jpg" alt="Image placeholder" class="img-fluid"></a>
+                                        <a href="shop-single_guest.html"><img src="images/cloth_1.jpg" alt="Image placeholder" class="img-fluid"></a>
                                     </figure>
                                     <div class="block-4-text p-4">
-                                        <h3><a href="shop-single.html">Tank Top</a></h3>
+                                        <h3><a href="shop-single_guest.html">Tank Top</a></h3>
                                         <p class="mb-0">Finding perfect t-shirt</p>
                                         <p class="text-primary font-weight-bold">$50</p>
-                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+                                        <p><a href="html/auth-login-basic.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
 
                                     </div>
                                 </div>
@@ -204,13 +195,13 @@
                             <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                                 <div class="block-4 text-center border">
                                     <figure class="block-4-image">
-                                        <a href="shop-single.html"><img src="images/shoe_1.jpg" alt="Image placeholder" class="img-fluid"></a>
+                                        <a href="shop-single_guest.html"><img src="images/shoe_1.jpg" alt="Image placeholder" class="img-fluid"></a>
                                     </figure>
                                     <div class="block-4-text p-4">
-                                        <h3><a href="shop-single.html">Corater</a></h3>
+                                        <h3><a href="shop-single_guest.html">Corater</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
-                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+                                        <p><a href="html/auth-login-basic.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
 
                                     </div>
                                 </div>
@@ -218,13 +209,13 @@
                             <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                                 <div class="block-4 text-center border">
                                     <figure class="block-4-image">
-                                        <a href="shop-single.html"><img src="images/cloth_2.jpg" alt="Image placeholder" class="img-fluid"></a>
+                                        <a href="shop-single_guest.html"><img src="images/cloth_2.jpg" alt="Image placeholder" class="img-fluid"></a>
                                     </figure>
                                     <div class="block-4-text p-4">
-                                        <h3><a href="shop-single.html">Polo Shirt</a></h3>
+                                        <h3><a href="shop-single_guest.html">Polo Shirt</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
-                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+                                        <p><a href="html/auth-login-basic.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
 
                                     </div>
                                 </div>
@@ -233,13 +224,13 @@
                             <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                                 <div class="block-4 text-center border">
                                     <figure class="block-4-image">
-                                        <a href="shop-single.html"><img src="images/cloth_3.jpg" alt="Image placeholder" class="img-fluid"></a>
+                                        <a href="shop-single_guest.html"><img src="images/cloth_3.jpg" alt="Image placeholder" class="img-fluid"></a>
                                     </figure>
                                     <div class="block-4-text p-4">
-                                        <h3><a href="shop-single.html">T-Shirt Mockup</a></h3>
+                                        <h3><a href="shop-single_guest.html">T-Shirt Mockup</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
-                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+                                        <p><a href="html/auth-login-basic.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
 
                                     </div>
                                 </div>
@@ -247,13 +238,13 @@
                             <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                                 <div class="block-4 text-center border">
                                     <figure class="block-4-image">
-                                        <a href="shop-single.html"><img src="images/shoe_1.jpg" alt="Image placeholder" class="img-fluid"></a>
+                                        <a href="shop-single_guest.html"><img src="images/shoe_1.jpg" alt="Image placeholder" class="img-fluid"></a>
                                     </figure>
                                     <div class="block-4-text p-4">
-                                        <h3><a href="shop-single.html">Corater</a></h3>
+                                        <h3><a href="shop-single_guest.html">Corater</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
-                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+                                        <p><a href="html/auth-login-basic.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
 
                                     </div>
                                 </div>
@@ -261,13 +252,13 @@
                             <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                                 <div class="block-4 text-center border">
                                     <figure class="block-4-image">
-                                        <a href="shop-single.html"><img src="images/cloth_1.jpg" alt="Image placeholder" class="img-fluid"></a>
+                                        <a href="shop-single_guest.html"><img src="images/cloth_1.jpg" alt="Image placeholder" class="img-fluid"></a>
                                     </figure>
                                     <div class="block-4-text p-4">
-                                        <h3><a href="shop-single.html">Tank Top</a></h3>
+                                        <h3><a href="shop-single_guest.html">Tank Top</a></h3>
                                         <p class="mb-0">Finding perfect t-shirt</p>
                                         <p class="text-primary font-weight-bold">$50</p>
-                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+                                        <p><a href="html/auth-login-basic.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
 
                                     </div>
                                 </div>
@@ -276,13 +267,13 @@
                             <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                                 <div class="block-4 text-center border">
                                     <figure class="block-4-image">
-                                        <a href="shop-single.html"><img src="images/cloth_2.jpg" alt="Image placeholder" class="img-fluid"></a>
+                                        <a href="shop-single_guest.html"><img src="images/cloth_2.jpg" alt="Image placeholder" class="img-fluid"></a>
                                     </figure>
                                     <div class="block-4-text p-4">
-                                        <h3><a href="shop-single.html">Polo Shirt</a></h3>
+                                        <h3><a href="shop-single_guest.html">Polo Shirt</a></h3>
                                         <p class="mb-0">Finding perfect products</p>
                                         <p class="text-primary font-weight-bold">$50</p>
-                                        <p><a href="shop.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+                                        <p><a href="html/auth-login-basic.html" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
 
                                     </div>
                                 </div>
@@ -419,9 +410,9 @@
                             <div class="col-md-6 col-lg-4">
                                 <ul class="list-unstyled">
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="shop.html">Shop</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="about_guest.html">About</a></li>
+                                    <li><a href="shop_guest.html">Shop</a></li>
+                                    <li><a href="contact_guest.html">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
